// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-mo37bg"
    data-testid="header"
  >
    <div
      class="css-1k3povc"
    >
      <div
        class="chakra-stack css-b5leqj"
        data-testid="left-content"
      >
        <img
          alt="IOB"
          src="[object Object]"
          style="width: auto; height: auto;"
        />
      </div>
      <div
        data-testid="right-content"
      >
        <span
          class="chakra-avatar css-am7y12"
        >
          <svg
            aria-label=" avatar"
            class="chakra-icon css-e8vrb1"
            fill="currentColor"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Header /> renders correctly only left content: OnlyLeftContent 1`] = `
<DocumentFragment>
  <div
    class="css-mo37bg"
    data-testid="header"
  >
    <div
      class="css-1k3povc"
    >
      <div
        class="chakra-stack css-b5leqj"
        data-testid="left-content"
      >
        <img
          alt="IOB"
          src="[object Object]"
          style="width: auto; height: auto;"
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Header /> renders correctly only right content: OnlyRightContent 1`] = `
<DocumentFragment>
  <div
    class="css-mo37bg"
    data-testid="header"
  >
    <div
      class="css-1k3povc"
    >
      <div
        class="css-17xejub"
      />
      <div
        data-testid="right-content"
      >
        <span
          class="chakra-avatar css-am7y12"
        >
          <svg
            aria-label=" avatar"
            class="chakra-icon css-e8vrb1"
            fill="currentColor"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
